# tough

./: .gitignore  .gitlab-ci.yml  .gitmodules  .rosinstall  .rosinstall.bak  .ycm_extra_conf.py  LICENSE  README.md  runQual1.sh
led_detector/: CMakeLists.txt  package.xml
led_detector/include/led_detector/: LedDetector.h
led_detector/msg/: LedPoseColor.msg
led_detector/src/: LedDetector.cpp  led_position.cpp
src/val_gazebo/: package.xml
src_tasks/src_qual2/: CMakeLists.txt  package.xml
src_tasks/src_qual2/src/: src_qual2.cpp
src_tasks/src_task3/: CMakeLists.txt  package.xml
src_tasks/src_task3/src/: climb_stairs.cpp  climb_stairs_node.cpp  door_task_node.cpp  grab_valve_node.cpp  leak_detector.cpp  leak_detector_grabber.cpp  leak_detector_node.cpp  rotate_valve.cpp  stair_detector_2.cpp  stair_detector_2_node.cpp  val_stairclimb.cpp  val_task3.cpp  val_task3SM.cpp  val_task3_node.cpp  val_task3_utils.cpp
srcsim/: .hg_archival.txt  .hgtags  CMakeLists.txt  Changelog.md  DATA.csv  kmeanscluster.py  kmeansclustering.py  measurement_log.csv  package.xml  pose.txt  vptree-0.2.tar.bz2
srcsim/.hg/: branch  dirstate  hgrc  undo.branch  undo.desc  undo.dirstate
srcsim/.hg/cache/: branchheads-served  tags
srcsim/config/: val_grasping.yaml
srcsim/launch/: dish.launch  qual1.launch  qual2.launch  unique.launch  unique_task1.launch  unique_task2.launch  unique_task3.launch
srcsim/scoring/: runQual1.sh  runQual1WithTimer.sh  runQual2.py  runQual2.sh  scoring_q2.rb
srcsim/scripts/: arm_demo.py  arm_traj_yaml.py  init_robot.sh  init_robot1.sh  init_robot2.sh  keyboard_teleop.py  rossleep.py  walk_test.py
srcsim/src/: Checkpoint.cc  FinalsPlugin.cc  Qual1Plugin.cc  Qual2Plugin.cc  SolarPanelPlugin.cc  Task.cc  Task1.cc  Task2.cc  Task3.cc  qual1_logger.cpp
srcsim/srv/: StartTask.srv
srcsim/worlds/: air_leak_detector.erb  cable.erb  habitat.erb  leak.erb  qual1.world  qual1_nogravity.world  qual2.world  qual2_nogravity.world  satellite.erb  solar_panel.erb  testWorld.world  unique.world  unique.world.erb  unique_task1.world  unique_task2.world
tough_bringup/: CMakeLists.txt  package.xml
tough_bringup/launch/: atlas_simulation.launch  final0.launch  final1.launch  final2.launch  final3.launch  qual1.launch  qual2.launch  tough_bringup.launch  valkyrie_simulation.launch  valkyrie_simulation_bringup.launch  whrl.launch
tough_bringup/scripts/: client_reader.py  client_writer.py  init.py
tough_common/: CMakeLists.txt  package.xml
tough_common/patches/: ihmc_ros_core.patch
tough_common/scripts/: addQual2ScorePrefix.sh  arm_demo.py  getIHMCCode.sh  runPanelDetection.sh  runTask1.sh  runTask2.sh  setup1.sh  setup2.sh  setuptemp.sh
tough_common/src/: robot_description.cpp  robot_state.cpp  test_robot_state.cpp
tough_control/tough_control_common/: CMakeLists.txt
tough_control/tough_controller_interface/: CMakeLists.txt  package.xml
tough_control/tough_kinematics/: CMakeLists.txt  package.xml
tough_examples/: CMakeLists.txt  package.xml
tough_examples/src/: interactive_arm_test.cpp  reset_robot.cpp  test_arm_navigation.cpp  test_head_navigation.cpp  test_nudgeLocal.cpp  test_pelvis_navigation.cpp
tough_gui/: CMakeLists.txt  package.xml
tough_gui/config/: config.ini
tough_gui/src/: configurationreader.cpp  main.cpp  tough_gui.cpp  tough_gui.ui
tough_motion_planners/tough_moveit_planners/: CMakeLists.txt  package.xml
tough_motion_planners/val_trac_ik/: CMakeLists.txt  package.xml
tough_navigation/navigation_common/: CMakeLists.txt  package.xml
tough_navigation/tough_footstep/: CMakeLists.txt  package.xml
tough_perception/tough_filters/: CMakeLists.txt  package.xml
tough_perception/tough_perception_bringup/: CMakeLists.txt  package.xml
val_bringup/: CMakeLists.txt  package.xml
val_bringup/config/: default.rviz  follow.rviz
val_bringup/launch/: field_bringup.launch  final0.launch  final1.launch  final2.launch  final3.launch  joint_state.launch  octomap.launch  qual1.launch  qual2.launch  qual_task_2.launch  whrl.launch  whrl_task1.launch
val_bringup/scripts/: arm_demo.py  broadcast_server.py  client.py  client_reader.py  client_writer.py  fsm_generator.py  gui.py  init.py  message_parser.py  mysocket.py  server.py
val_control/: CMakeLists.txt  package.xml
val_control/src/: robot_state.cpp  test_arm_navigation.cpp  test_chest_navigation.cpp  test_gripper_control.cpp  test_head_navigation.cpp  test_neck_navigation.cpp  test_nudgeLocal.cpp  test_pelvis_navigation.cpp  test_robot_state.cpp  val_arm_navigation.cpp  val_chest_navigation.cpp  val_gripper_control.cpp  val_head_navigation.cpp  val_neck_navigation.cpp  val_pelvis_navigation.cpp  val_wholebody_manipulation.cpp  wholebodymanipulation.cpp  wholebodymanipulation.h
val_control/tough_controller_interface/: CMakeLists.txt  package.xml
val_control/val_control_common/: CMakeLists.txt  package.xml
val_control/val_controllers/: CMakeLists.txt  package.xml
val_control/val_joint_state_publisher/: CMakeLists.txt  package.xml
val_footstep/: CMakeLists.txt  ReadMe  package.xml
val_footstep/config/: footsteps_valkyrie.yaml  rviz_footstep_planning.rviz
val_footstep/launch/: val_footstep.launch  val_footstep_map.launch
val_footstep/maps/: mymap.pgm
val_footstep/src/: footstep_node.cpp  octomap_origin.cpp  pass_footstep.cpp  plan_footstep.cpp  test_footstep.cpp
val_footstep/srv/: footStep.srv
val_gazebo/: CMakeLists.txt  README.md  package.xml
val_gazebo/launch/: multi.txt  qual1.launch  qual_task_1.launch  qual_task_2.launch  valkyrie_empty_world.launch
val_gazebo/plugins/: ButtonPanel.cc  ButtonPanel.hh  GazeboCompat.hh  LightControl.cc  LightControl.hh  MultiSenseSLPlugin.cc  MultiSenseSLPlugin.h
val_gazebo/scripts/: src_door_controller
val_gazebo/src/: src_door.cc
val_gazebo/worlds/: GravityDisabled.world  directional_light.world  light_panel.world  qual_task_1.world  qual_task_2.world
val_gui/: CMakeLists.txt  package.xml
val_gui/config/: config.ini
val_gui/src/: configurationreader.cpp  main.cpp  val_gui.cpp  val_gui.h  val_gui.ui  val_marker.cpp
(+2013 files in other folders)
