<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">
  <name>srcsim</name>
  <version>0.0.1</version>
  <description>Space Robotics Challenge</description>
  <maintainer email="nate@osrfoundation.org">Nate Koenig</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>topic_tools</exec_depend>

</package>
