<?xml version="1.0"?>
<package>
  <name>tough_bringup</name>
  <version>0.1.0</version>
  <description>tough bringup</description>
  <maintainer email="vvjagtap@wpi.edu">Vinayak Jagtap</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tough_common</run_depend>
  <run_depend>tough_control_common</run_depend>
  <run_depend>tough_controller_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tough_controller_interface</build_depend>
  <build_depend>tough_control_common</build_depend>
  <build_depend>tough_common</build_depend>

</package>
