<?xml version="1.0"?>
<package>
<name>tough_common</name>
<version>0.1.0</version>
<description>The tough_common package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sgavarraju@wpi.edu">sumanth</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


    <build_depend>urdf</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <run_depend>urdf</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->

  </export>
  </package>
