<?xml version="1.0"?>
<package format="2">
  <name>val_bringup</name>
  <version>1.0.0</version>
  <description>valkyrie bringup</description>
  <maintainer email="mitranopeter@gmail.com">peter</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>srcsim</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>

</package>
